--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
   "name": "domus-ai",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "A web application for real estate insights powered by AI.",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
+  "keywords": [
+    "real estate",
+    "AI",
+    "OpenAI",
+    "Next.js"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.53.0",
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.9.1",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-preset-links": "^2.12.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "latest",
+    "typescript": "^4.4.4"
   }
 }
