--- a/package.json
+++ b/package.json
@@ -18,14 +18,24 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "axios": "^0.21.1"
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-config-next": "latest",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "^4.4.4"
   }
 }
