--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@supabase/supabase-js": "^2.56.0",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
+    "@upstash/redis": "^1.35.3",
     "axios": "^0.21.1",
     "next": "latest",
+    "nodemailer": "^7.0.6",
     "react": "latest",
     "react-dom": "latest",
     "tsparticles": "^3.9.1"
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "19.1.10",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
