--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.12",
-    "@types/node": "24.3.0",
+    "@types/node": "^22.7.5",
     "@types/nodemailer": "^7.0.1",
-    "@types/react": "19.1.10",
+    "@types/react": "^19.0.7",
     "autoprefixer": "^10.4.21",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "latest",
+    "eslint": "^9.9.1",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "typescript": "^4.4.4"
+    "typescript": "^5.6.3"
   }
 }
